Use the right token, deploy the right folder

--- a/.github/workflows/tbd-cms.yml
+++ b/.github/workflows/tbd-cms.yml
@@ -65,16 +65,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'pnpm'
-          cache-dependency-path: cms/pnpm-lock.yaml
       - name: Install dependencies
         working-directory: cms
         run: pnpm install
@@ -86,6 +76,6 @@ jobs:
       - name: Deploy
         uses: sanity-io/github-action-sanity@v0.7-alpha
         env:
-          SANITY_AUTH_TOKEN: ${{ secrets.SANITY_AUTH_TOKEN }}
+          SANITY_AUTH_TOKEN: ${{ secrets.SANITY_TOKEN }}
         with:
-          args: deploy
+          args: deploy cms/dist
