Revert to package deploy

--- a/.github/workflows/tbd-cms.yml
+++ b/.github/workflows/tbd-cms.yml
@@ -63,14 +63,28 @@ jobs:
       group: cms-deploy
       cancel-in-progress: true
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'pnpm'
+          cache-dependency-path: cms/pnpm-lock.yaml
+      - name: Install dependencies
+        working-directory: cms
+        run: pnpm install
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: cms
-          path: dist
+          path: ./cms/dist
       - name: Deploy
-        uses: sanity-io/github-action-sanity@v0.7-alpha
+        working-directory: cms
+        run: pnpm run deploy
         env:
           SANITY_AUTH_TOKEN: ${{ secrets.SANITY_TOKEN }}
-        with:
-          args: deploy dist
