--- a/.github/workflows/tbd-cms.yml
+++ b/.github/workflows/tbd-cms.yml
@@ -43,13 +43,6 @@ jobs:
           SANITY_STUDIO_PROJECT: ${{ secrets.SANITY_PROJECT_ID }}
           SANITY_STUDIO_PROD_DATASET: ${{ secrets.SANITY_DATASET }}
           SANITY_STUDIO_DEV_DATASET: ${{ secrets.SANITY_DEV_DATASET }}
-      - name: Upload CMS build
-        # Siwtch to refs/heads/main when merged
-        if: github.ref == 'refs/heads/refactor/the-great-cms-migration'
-        uses: actions/upload-artifact@v4
-        with:
-          name: cms
-          path: ./cms/dist
   
   #########################
   ## Deploy site to Sanity
@@ -78,15 +71,10 @@ jobs:
       - name: Install dependencies
         working-directory: cms
         run: pnpm install
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: cms
-          path: ./cms/dist
       - name: Deploy
         working-directory: cms
         run: pnpm run deploy
         env:
-          SANITY_AUTH_TOKEN: ${{ secrets.SANITY_TOKEN }}
+          SANITY_AUTH_TOKEN: ${{ secrets.SANITY_DEPLOY_TOKEN }}
           SANITY_STUDIO_PROJECT: ${{ secrets.SANITY_PROJECT_ID }}
           SANITY_STUDIO_PROD_DATASET: ${{ secrets.SANITY_DATASET }}
