Add manifest and service worker
May want to update how SW reload is handled, but this is a much more relaxed SW than in previous times

--- a/site/.eslintrc.yml
+++ b/site/.eslintrc.yml
@@ -60,3 +60,8 @@ rules:
     - argsIgnorePattern: '^_'
       varsIgnorePattern: '^_'
       caughtErrorsIgnorePattern: '^_'
+  import/no-unresolved:
+    - error
+    - ignore:
+        - 'virtual:pwa-info'
+        - 'virtual:pwa-register'
