--- a/site/package.json
+++ b/site/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@astrojs/node": "^8.2.3",
+    "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/svelte": "^5.2.0",
     "@sanity/client": "^6.8.0",
