--- a/site/package.json
+++ b/site/package.json
@@ -22,8 +22,8 @@
     "js:fix": "eslint --fix .",
     "prettier:lint": "prettier --plugin-search-dir=. -c .",
     "prettier:fix": "prettier --plugin-search-dir=. --write .",
-    "css:lint": "stylelint \"**/*.{css,scss,astro}\"",
-    "css:fix": "stylelint --fix \"**/*.{css,scss,astro}\"",
+    "css:lint": "stylelint \"**/*.{css,scss,svelte,astro}\" ",
+    "css:fix": "stylelint --fix \"**/*.{css,scss,svelte,astro}\" ",
     "firebase": "firebase",
     "firebase:emulate": "firebase emulators:start",
     "firebase:deploy": "firebase hosting:channel:deploy",
