--- a/site/.stylelintrc.json
+++ b/site/.stylelintrc.json
@@ -6,8 +6,8 @@
   "ignoreFiles": ["node_modules/**/*", "dist/**/*", "public/**/*"],
   "customSyntax": "postcss-html",
   "rules": {
-    "selector-max-compound-selectors": false,
-    "no-descending-specificity": false,
+    "selector-max-compound-selectors": null,
+    "no-descending-specificity": null,
     "no-duplicate-selectors": true,
     "color-named": "never",
     "selector-no-qualifying-type": true,
