--- a/.github/workflows/tbd-site.yml
+++ b/.github/workflows/tbd-site.yml
@@ -42,8 +42,8 @@ jobs:
           SANITY_TOKEN: ${{ secrets.SANITY_TOKEN }}
           SANITY_WEBHOOK_SECRET: ${{ secrets.SANITY_WEBHOOK_SECRET }}
       - name: Upload search build
-        # Switch to 'refs/heads/main' when merged
-        if: github.ref == 'refs/heads/refactor/the-great-cms-migration' || github.event_name == 'pull_request'
+        # Let non-Dependabot branches and PRs do a preview deploy
+        if: (github.ref_type == 'branch' && !startsWith(github.ref_name , 'dependabot')) || github.event_name == 'pull_request'
         uses: actions/upload-artifact@v4
         with:
           name: search
@@ -67,9 +67,6 @@ jobs:
       - name: Set Channel ID - Branch
         if: github.ref_type == 'branch'
         run: echo "CHANNEL_ID=branch-${{ github.ref_name }}" >> $GITHUB_ENV
-      - name: Set Channel ID - Next
-        if: github.ref == 'refs/heads/refactor/the-great-cms-migration'
-        run: echo "CHANNEL_ID=next" >> $GITHUB_ENV
       - name: Set Channel ID - Live
         if: github.ref == 'refs/heads/main'
         run: echo "CHANNEL_ID=live" >> $GITHUB_ENV
