--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,4 +1,4 @@
-name: "\U0001F680 New ChromeOS.dev feature request"
+name: "\U0001F680 ChromeOS.dev Feature Request"
 description: Propose a new feature to be added to ChromeOS.dev
 labels: ["enhancement: feature"]
 body:
