Add development dataset switch
Lets site run off of development database instead of production, allowing for pre-production testing of CMS-tied changes

--- a/site/package.json
+++ b/site/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
+    "dev:dev": "SANITY_DATASET=development astro dev",
     "generate:search": "tsx ./lib/search.ts",
     "astro:dev": "astro dev",
     "astro:build": "astro build",
