--- a/site/package.json
+++ b/site/package.json
@@ -41,6 +41,7 @@
     "astro": "^4.8.0",
     "astro-portabletext": "^0.10.0",
     "bcrypt": "^5.1.1",
+    "canvas-confetti": "^1.9.3",
     "css-paint-polyfill": "^3.4.0",
     "firebase-functions": "^5.0.1",
     "i18n-iso-countries": "^7.11.1",
