--- a/site/package.json
+++ b/site/package.json
@@ -7,16 +7,17 @@
     "dev": "astro dev",
     "dev:dev": "SANITY_DATASET=development astro dev",
     "dev:offline": "OFFLINE=true astro dev",
+    "pregen": "run-p generate:*",
     "generate:search": "tsx ./lib/search.ts",
     "generate:archive": "tsx ./lib/archive.ts",
     "astro:dev": "astro dev",
     "astro:build": "astro build",
-    "start": "run-s generate:search astro:dev",
-    "build": "run-s generate:search astro:build",
+    "start": "run-s astro:dev",
+    "build": "run-s astro:build",
     "preview": "astro preview",
     "astro": "astro",
     "prepare": "cd ../ && husky install ./site/.husky",
-    "pretest": "run-s generate:search",
+    "pretest": "run-s pregen",
     "test": "run-s lint build",
     "lint": "run-p *:lint",
     "lint:staged": "lint-staged",
