Add views path to TSConfig

--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": ".",
     "paths": {
       "$components/*": ["src/components/*"],
+      "$views/*": ["src/layouts/views/*"],
       "$layouts/*": ["src/layouts/*"],
       "$js/*": ["src/js/*"],
       "$lib/*": ["lib/*"],
