--- a/.github/workflows/tbd-cms.yml
+++ b/.github/workflows/tbd-cms.yml
@@ -78,3 +78,4 @@ jobs:
           SANITY_AUTH_TOKEN: ${{ secrets.SANITY_DEPLOY_TOKEN }}
           SANITY_STUDIO_PROJECT: ${{ secrets.SANITY_PROJECT_ID }}
           SANITY_STUDIO_PROD_DATASET: ${{ secrets.SANITY_DATASET }}
+          SANITY_STUDIO_PREVIEW_KEY: ${{ secrets.PREVIEW_KEY }}
