Swap Prism for Shiki
Prism has given us so many problems in this codebase, and is now blocking Preview because of its weird global handling. Swapping to Shiki. Eventually should add our own theme

--- a/site/package.json
+++ b/site/package.json
@@ -54,8 +54,8 @@
     "pagefind": "^1.1.0",
     "posthtml": "^0.16.6",
     "posthtml-match-helper": "^2.0.0",
-    "prismjs": "^1.29.0",
     "requestidlecallback": "^0.3.0",
+    "shiki": "^1.10.0",
     "slugify": "^1.6.6",
     "svelte": "^4.2.16",
     "uslug": "^1.0.4",
