--- a/site/package.json
+++ b/site/package.json
@@ -5,15 +5,19 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
+    "dev:dev": "SANITY_DATASET=development astro dev",
+    "dev:offline": "OFFLINE=true astro dev",
+    "pregen": "run-p generate:*",
     "generate:search": "tsx ./lib/search.ts",
+    "generate:archive": "tsx ./lib/archive.ts",
     "astro:dev": "astro dev",
     "astro:build": "astro build",
-    "start": "run-s generate:search astro:dev",
-    "build": "run-s generate:search astro:build",
+    "start": "run-s astro:dev",
+    "build": "run-s astro:build",
     "preview": "astro preview",
     "astro": "astro",
     "prepare": "cd ../ && husky install ./site/.husky",
-    "pretest": "run-s generate:search",
+    "pretest": "run-s pregen",
     "test": "run-s lint build",
     "lint": "run-p *:lint",
     "lint:staged": "lint-staged",
@@ -38,16 +42,21 @@
     "astro": "^4.8.0",
     "astro-portabletext": "^0.10.0",
     "bcrypt": "^5.1.1",
+    "canvas-confetti": "^1.9.3",
     "css-paint-polyfill": "^3.4.0",
+    "dotenv": "^16.4.5",
     "firebase-functions": "^5.0.1",
     "i18n-iso-countries": "^7.11.1",
+    "iso-639-1": "^3.1.2",
     "lottie-web": "^5.12.2",
+    "nanoid": "^5.0.7",
     "octokit": "^4.0.2",
     "pagefind": "^1.1.0",
     "posthtml": "^0.16.6",
     "posthtml-match-helper": "^2.0.0",
-    "prismjs": "^1.29.0",
     "requestidlecallback": "^0.3.0",
+    "shiki": "^1.10.0",
+    "slugify": "^1.6.6",
     "svelte": "^4.2.16",
     "uslug": "^1.0.4",
     "workbox-cacheable-response": "^7.1.0",
@@ -68,7 +77,6 @@
     "@typescript-eslint/parser": "^7.8.0",
     "@vite-pwa/astro": "^0.4.0",
     "breakpoint-sass": "^3.0.0",
-    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^9.1.0",
@@ -79,14 +87,10 @@
     "eslint-plugin-n": "^17.5.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-svelte": "^2.38.0",
-    "firebase-tools": "^13.8.1",
-    "front-matter": "^4.0.2",
     "fs-extra": "^11.2.0",
     "husky": "^9.0.11",
-    "iso-639-1": "^3.1.2",
     "lint-staged": "^15.2.2",
     "lunr": "^2.3.9",
-    "nanoid": "^5.0.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "postcss-html": "^1.7.0",
@@ -95,7 +99,6 @@
     "prettier-plugin-svelte": "^3.2.3",
     "sass": "^1.77.0",
     "sass-toolkit": "^2.10.2",
-    "slugify": "^1.6.6",
     "stylelint": "^16.5.0",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-sass-guidelines": "^11.1.0",
